--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -7,13 +7,15 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    top: 0;
+    left: 0;
     .hero-img {
       position: absolute;
       max-width: none;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 100%;
+      width: 130%;
     }
     &:after {
       content: " ";
